--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
     "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
+    "lint:style": "stylelint **/*.scss",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc.json"
   },
   "browserslist": {
@@ -55,6 +56,12 @@
     "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-standard-scss": "^4.0.0",
+    "stylelint-prettier": "^2.0.0",
+    "stylelint-scss": "^4.2.0",
     "tailwindcss": "^3.1.3"
   }
 }
